change the image path

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="w-full h-12 bottom-0 fixed  bg-blue-700 items-center justify-center flex">
       <div id="openForm" class="bg-blue-700 h-20 w-20 absolute bottom-0 p-4 rounded-[50%] cursor-pointer">
-        <img src="../tailwindProject/image/pen.png" alt="pen" class=" h-10 w-10 ">
+        <img src="./image/pen.png" alt="pen" class=" h-10 w-10 ">
       </div>
     </div>
   </div>
