--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </div>
 
-  <script src="../tailwindProject/js/toDoList.js"></script>
+  <script src="./js/toDoList.js"></script>
 </body>
 
 </html>
